--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,10 @@
 		</a>
 		{% else %}
 		<a href="{{ site.baseurl }}/" class="header__title">
-			{{ site.data.settings.basic_settings.site_title }}
+			{{ site.data.settings.basic_settings.site_title_part_a }}
+		</a>
+		<a href="{{ site.baseurl }}/" class="header__title">
+			<b>{{ site.data.settings.basic_settings.site_title_part_b }}</b>
 		</a>
 		{% endif %}
 
