--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,7 @@
 		</a>
 		{% else %}
 		<a href="{{ site.baseurl }}/" class="header__title">
-			{{ site.data.settings.basic_settings.site_title_part_a }}
-		</a>
-		<a href="{{ site.baseurl }}/" class="header__title">
-			<b>{{ site.data.settings.basic_settings.site_title_part_b }}</b>
+			{{ site.data.settings.basic_settings.site_title_part }}
 		</a>
 		{% endif %}
 
