--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		</a>
 		{% else %}
 		<a href="{{ site.baseurl }}/" class="header__title">
-			{{ site.data.settings.basic_settings.site_title_part }}
+			{{ site.data.settings.basic_settings.site_title }}
 		</a>
 		{% endif %}
 
