--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
 			<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
 		</div>
 
-		<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-		
+		<p class="rss-subscribe">subscribe <a href="{{ "locus-communis/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+
 		{% include socials.html %}
 
 	</div>
