--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,14 +4,14 @@ layout: default
 
 <section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url({{ page.featured_image | relative_url }})">
+	<div class="hero__image" style="background-image: url({{ template.featured_image | relative_url }})">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>{{ page.title }}</h1>
-		<p>{{ page.subtitle }}</p>
+		<h1>{{ template.title }}</h1>
+		<p>{{ template.subtitle }}</p>
 
 	</div>
 
@@ -23,7 +23,7 @@ layout: default
 
 		<article class="single-post">
 
-			{{ page.content }}
+			{{ template.content }}
 
 		</article>
 
